kubernetes-manifests/2-mysql-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-exporter
  namespace: default
  labels:
    app: mysql-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-exporter
  template:
    metadata:
      labels:
        app: mysql-exporter
    spec:
      containers:
      - name: mysql-exporter
        image: prom/mysqld-exporter:v0.15.1
        args:
        - --mysqld.address=mysql-release-primary:3306
        - --mysqld.username=root
        ports:
        - containerPort: 9104
          name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter
  namespace: default
  labels:
    app: mysql-exporter
spec:
  selector:
    app: mysql-exporter
  ports:
  - name: metrics
    port: 9104
    targetPort: 9104
