kubernetes-manifests/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 172-105-12-116.ip.linodeusercontent.com
    http:
      paths:
      - backend:
          service:
            name: java-app-service
            port: 
              number: 8080
        pathType: Prefix
        path: /
